# simsapa.github.io

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
development/manual-database-setup/: index.html
development/running-from-source/: index.html
docs/: index.md
docs/development/: manual-database-setup.md  running-from-source.md
docs/features/: app-windows.md  dhamma-texts.md  localhost-api.md  search-queries.md
docs/install/: chromeos.md  linux.md  macos.md  plugins.md  portable-use.md  uninstall.md  windows.md
docs/troubleshooting/: linux.md  low-memory-mode.md
features/app-windows/: index.html
features/dhamma-texts/: index.html
features/localhost-api/: index.html
features/search-queries/: index.html
install/chromeos/: index.html
install/linux/: index.html
install/macos/: index.html
install/plugins/: index.html
install/portable-use/: index.html
install/uninstall/: index.html
install/windows/: index.html
search/: search_index.json
troubleshooting/linux/: index.html
troubleshooting/low-memory-mode/: index.html
